virtualbox (4.0.8-dfsg-3) UNRELEASED; urgency=low

  * Don't disable the hardware performance counter in the init script, not
    needed anymore since VirtualBox 4.0.0.
  * Add 31-multiarch-dri-path.patch to fix 3d guest acceleration with the
    multiarched mesa package.
  * Add 32-linux-3.0-vtx-detection.patch to enable VT-x on Linux 3.0.
    (LP: #799253)

 -- Felix Geyer <debfx-pkg@fobos.de>  Tue, 07 Jun 2011 13:57:18 +0200

virtualbox (4.0.8-dfsg-2) unstable; urgency=low

  * Add virtualbox-guest-x11 Breaks/Replaces virtualbox-ose-guest-x11.
    (Closes: #628784)

 -- Felix Geyer <debfx-pkg@fobos.de>  Wed, 01 Jun 2011 12:50:08 +0200

virtualbox (4.0.8-dfsg-1) unstable; urgency=low

  [ Felix Geyer ]
  * New upstream release. (Closes: #627680)
  * Adapt 07-vboxnetflt-reference.patch to new upstream version.
  * Update overrides for lintian 2.5.
  * Register mime types and install icons.
  * Pass --enable-vnc to configure instead of enabling it in LocalConfig.kmk.
  * Drop Conflicts between virtualbox-ose-dkms and virtualbox-ose-guest-dkms
    as the kernel module symbols are mangled now. (Closes: #625742)
  * Add lintian overrides for no-symbols-control-file usr/lib/VBoxOGL*.so.
  * Create vboxsf group in virtualbox-ose-guest-utils postinst to make
    auto-mounting shared folders work.
  * Automatically detect the distribution version for backports.
    - Build-depend on lsb-release.
  * Strip *.gc and *.r0 files that are not handled by dh_strip and fix their
    file permissions.
  * Drop obsolete alternate build-dependency libcurl3-openssl-dev.
  * Bump Standards-Version to 3.9.2, no changes needed.
  * Build vdfuse with debugging symbols.
  * Make virtualbox-ose-dkms depend on virtualbox-ose and
    virtualbox-ose-guest-dkms on virtualbox-ose-guest-utils.
  * Don't fail package removal if the virtualbox-ose init script exits with
    an error.
  * Don't remove the vboxusers group on upgrades from old package versions.