@@ -6,6 +6,7 @@ virtualbox (4.0.8-dfsg-3) UNRELEASED; urgency=low
     multiarched mesa package.
   * Add 32-linux-3.0-vtx-detection.patch to enable VT-x on Linux 3.0.
     (LP: #799253)
+  * Use new Provides scheme for xorg video and input drivers. (Closes: #631612)
 
  -- Felix Geyer <debfx-pkg@fobos.de>  Tue, 07 Jun 2011 13:57:18 +0200
 
